# gRPC-server

./: .env.exemple  .env.test  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile-devel  GoodPratices.MD  Makefile  README.md  SECURITY.md  build.rs  cliff.toml  docker-compose.yml  prometheus.yml  rust-toolchain.toml  rustfmt.toml  shell.nix
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: CI.yml
api/: Makefile
api-client/: Cargo.toml
api-proto/: build.rs
api-proto/src/: client.rs  lib.rs
api/rust/: .gitignore  Cargo.toml  Makefile  build.rs
api/rust/proto/kiro/: buf.gen.ts.yaml  buf.yaml
api/rust/proto/kiro/auth/v1/: auth_service.proto  session.proto
api/rust/proto/kiro/client/v1/: client_service.proto  notifications.proto  privacy.proto  security.proto  settings.proto  user.proto
api/rust/proto/kiro/common/v1/: common.proto
api/rust/proto/kiro/group/v1/: group.proto  group_service.proto  member.proto
api/rust/proto/kiro/project/v1/: project.proto  project_service.proto
api/rust/src/: client.rs  group.rs
api/rust/src/auth/: auth.v1.rs  auth.v1.serde.rs
api/rust/src/client/: client.v1.rs  client.v1.serde.rs  google.api.rs
api/rust/src/common/: common.v1.rs  common.v1.serde.rs
api/rust/src/group/: group.v1.rs  group.v1.serde.rs
kiro/: .gitignore  .surrealdb  Cargo.toml  Dockerfile  Makefile
kiro-api/: Makefile  docker-compose.yml
kiro-api/rust/: .gitignore  Cargo.toml  Makefile  build.rs  config.rs  utils.rs
kiro-api/rust/builder/: common.rs  google.rs  mod.rs
kiro-api/rust/builder/services/: auth.rs  client.rs  mod.rs
kiro-api/rust/src/: lib.rs
kiro-api/rust/src/api/: auth.rs  client.rs  common.rs  google.rs  group.rs  mod.rs
kiro-auth/: Cargo.toml  Makefile
kiro-auth/src/: error.rs  lib.rs
kiro-auth/src/http/: login.rs  mod.rs
kiro-auth/src/models/: mod.rs  session_model.rs
kiro-auth/src/services/: login.rs  logout.rs  mod.rs  register.rs
kiro-auth/src/utils/: ip.rs  password.rs
kiro-client/: Cargo.toml
kiro-client/src/: error.rs  lib.rs
kiro-client/src/http/: mod.rs
kiro-client/src/http/auth/: login.rs  logout.rs  mod.rs  register.rs
kiro-client/src/http/user/: delete_user.rs  disable_user.rs  mod.rs  read_user.rs  send_email_to_change_email.rs  send_email_to_change_password.rs  update_email.rs  update_language.rs  update_notifications.rs  update_password.rs  update_privacy.rs  update_security.rs  update_theme.rs  upload_avatar.rs
kiro-client/src/models/: mod.rs  session_model.rs  user_model.rs
kiro-client/src/services/: mod.rs
kiro-client/src/services/auth/: login.rs  logout.rs  register.rs
kiro-client/src/services/user/: delete_user.rs  disable_user.rs  mod.rs  read_user.rs  send_email_to_change_email.rs  send_email_to_change_password.rs  update_email.rs  update_language.rs  update_notifications.rs  update_password.rs  update_privacy.rs  update_security.rs  update_theme.rs  upload_avatar.rs
kiro-client/src/utils/: ip.rs  mod.rs  password.rs
kiro-database/: Cargo.toml  Makefile
kiro-database/src/: error.rs  lib.rs
kiro-database/src/database/: db_bridge.rs  db_types.rs  mod.rs  surrealdb_repo.rs
kiro-database/src/utils/: env.rs  mod.rs
kiro-mailer/: Cargo.toml
kiro-mailer/email-templates/: error.html
kiro-mailer/src/: error.rs  lib.rs
kiro-mailer/src/models/: link_model.rs  mod.rs
kiro-mailer/src/utils/: mailer.rs  mod.rs
kiro-payment/: Cargo.toml
kiro-proto/: Cargo.toml  build.rs
kiro-proto/src/: auth.rs  client.rs  common.rs  group.rs  lib.rs
kiro-storage/: Cargo.toml
kiro-storage/src/: error.rs  lib.rs
kiro-storage/src/utils/: aws.rs  mod.rs
kiro/src/: config.rs  error.rs  main.rs  prelude.rs
kiro/src/cmd/: configfile.rs  mod.rs  root.rs
kiro/src/config/: app.rs  certificate.rs  logging_config.rs  mod.rs  ports.rs
kiro/src/middleware/: auth.rs  logging.rs  mod.rs
kiro/src/server/: certificate.rs  health.rs  mod.rs  redirect.rs  reflection.rs  setup.rs  shutdown.rs
kiro/src/server/docs/: client_doc.rs  mod.rs
kiro/src/storage/: mod.rs
kiro/src/utils/: doc.rs  env.rs  error.rs  error_mailer.rs  grpc_utils.rs  mod.rs  telemetry.rs
migrations/: link.surql  script_migration.surql  session.surql  user.surql
src/: main.rs
tools/: grcov.sh  llvm-cov.py  llvm-cov.sh
