[workspace]
resolver = "2"
members = ["kiro", "kiro-proto"]

[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
# Local dependencies
kiro = { path = "./kiro" }
kiro_proto = { path = "./kiro-proto" }

# Global dependencies
axum = "0.7.5"
diesel = "2.2"
dotenv = "0.15.0"
http = "1.1.0"
lazy_static = "1.5"
serde = "1.0.130"
surrealdb = "1.4.2"
tokio = "1.39.3"
tonic = { version = "0.11.0", default-features = false }
tower-http = "0.5.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
