[workspace]
resolver = "2"
members = [
    "kiro",
    "kiro-api/rust",
    "kiro-client",
    "kiro-database",
    "kiro-mailer",
]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
# Local dependencies
kiro = { path = "./kiro" }
kiro_api = { path = "./kiro-api/rust" }
kiro_client = { path = "./kiro-client" }
kiro_database = { path = "./kiro-database" }
kiro_mailer = { path = "./kiro-mailer" }

# Global dependencies
chrono = { version = "0.4.38", default-features = false }
dotenv = { version = "0.15.0", default-features = false }
lazy_static = { version = "1.5", default-features = false }
rand = { version = "0.8.5", default-features = false }
serde = { version = "1.0.130", default-features = false }
serde_derive = { version = "1.0.130", default-features = false }
serde_json = { version = "1.0.120", default-features = false }

# gRPC dependencies
prost = { version = "0.13" }
prost-types = { version = "0.13" }

# Dependencies for the HTTP client
async-stream = { version = "0.3.5", default-features = false }
async-trait = { version = "0.1.81", default-features = false }
http = { version = "1.1.0", default-features = false }
futures = { version = "0.3.30", default-features = false }
reqwest = { version = "0.12.5", default-features = false }
tokio = { version = "1.38", default-features = false }
tokio-util = { version = "0.7.11", default-features = false }
tokio-stream = { version = "0.1.15", default-features = false }
tower = { version = "0.5.2", default-features = false }

# Dependencies for the gRPC server
axum = { version = "0.7.5", default-features = false }
tonic = { version = "0.12.3", default-features = false }

# Dependencies for the error handling
anyhow = { version = "1.0.86", default-features = false }
log = { version = "0.4.22", default-features = false }
thiserror = { version = "1.0.61", default-features = false }

# Testing dependencies
mockall = { version = "0.13.0", default-features = false }

# Dependencies for database backends
diesel = { version = "2.2" }
diesel_migrations = { version = "2.2", default-features = false }
surrealdb = { version = "1.4.2" }
surrealdb-migrations = { version = "1.4.1", default-features = false }

# Email dependencies
lettre = { version = "0.11.7", default-features = false }

# Payment dependencies
async-stripe = { version = "0.37.1", default-features = false }

# Dependencies for tracing
opentelemetry = { version = "0.24.0", default-features = false }
opentelemetry_sdk = { version = "0.24.1", default-features = false }
opentelemetry-otlp = { version = "0.17.0", default-features = false }
tracing = { version = "0.1.40", default-features = false }
tracing-core = { version = "0.1.31", default-features = false }
tracing-opentelemetry = { version = "0.25", default-features = false }
tracing-subscriber = { version = "0.3.18", default-features = false }
