[package]
name = "api-client"
version = "0.0.1"
authors = ["Charlie Cohen <linzellart@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
axum = { workspace = true }
dotenv = { workspace = true }
http = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
