[package]
name = "kiro_auth"
description = "The authentication client library"
version = "0.0.2"
authors = ["Charlie Cohen <linzellart@gmail.com>"]
homepage = "https://github.com/Linzell/API-Client"
license = "GNU AGPLv3"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tracing"]

models = []
services = ["models", "kiro_client/models"]
mailer = []

tracing = ["dep:tracing"]

[dependencies]
# General dependencies
kiro_api = { workspace = true, features = ["json", "auth"] }
kiro_database = { workspace = true, features = ["surrealdb"] }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Crypto dependencies
argon2 = { version = "0.5.3" }
once_cell = { version = "1.20.2" }
aes-gcm = { version = "0.10.1" }
base64 = { version = "0.21.0" }
rand = { workspace = true }
rand_core = { version = "0.6.4", features = ["std"] }

# Dependencies for the server
axum = { workspace = true, features = ["json"] }
http = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }

# Dependencies for the error handling
thiserror = { workspace = true }

# Testing dependencies
mockall = { workspace = true }

# Optional dependencies
## Client dependencies
kiro_client = { workspace = true, optional = true }

# Optional dependencies
## Mailer dependencies
# kiro_mailer = { workspace = true, features = ["mock"], optional = true }

# Optional dependencies
## Dependencies for tracing
tracing = { workspace = true, optional = true, features = ["log"] }

[dev-dependencies]
mockito = { version = "1.5.0" }
