[package]
name = "kiro_client"
description = "The client library"
version = "0.0.2"
authors = ["Charlie Cohen <linzellart@gmail.com>"]
homepage = "https://github.com/Linzell/API-Client"
license = "GNU AGPLv3"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tracing"]

auth = ["mailer"]
user = ["storage"]

mailer = ["kiro_mailer/client", "kiro_mailer/mock"]
storage = ["kiro_storage/aws", "kiro_storage/mock"]

tracing = ["dep:tracing"]

[dependencies]
# General dependencies
kiro_api = { workspace = true, features = ["json", "auth", "client"] }
kiro_database = { workspace = true, features = ["surrealdb"] }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Crypto dependencies
argon2 = { version = "0.5.3" }
once_cell = { version = "1.20.2" }
aes-gcm = { version = "0.10.1" }
base64 = { version = "0.21.0" }
rand = { workspace = true }
rand_core = { version = "0.6.4", features = ["std"] }

# Dependencies for the server
axum = { workspace = true, features = ["json"] }
http = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true, features = ["util"] }

# Dependencies for the error handling
thiserror = { workspace = true }

# Testing dependencies
mockall = { workspace = true }

# Optional dependencies
## Mailer dependencies
kiro_mailer = { workspace = true, optional = true }

# Optional dependencies
## Storage dependencies
kiro_storage = { workspace = true, optional = true }

# Optional dependencies
## Dependencies for tracing
tracing = { workspace = true, optional = true, features = ["log"] }

[dev-dependencies]
mockito = { version = "1.5.0" }
