[package]
name = "kiro_storage"
description = "The storage for the Kiro tool"
version = "0.0.2"
authors = ["Charlie Cohen <linzellart@gmail.com>"]
homepage = "https://github.com/Linzell/gRPC-server"
license = "GNU AGPLv3"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tracing"]

aws = [
    "dep:aws-config",
    "dep:aws-sdk-s3",
    "dep:aws-smithy-runtime-api",
    "dep:clap",
]
azure = []
google = []
services = []

tracing = ["dep:tracing"]
mock = []

[dependencies]
# General dependencies
kiro_api = { workspace = true, features = ["json"] }
kiro_database = { workspace = true, features = ["surrealdb"] }

# Dependencies for the server
async-trait = { workspace = true }
axum = { workspace = true, features = ["json"] }
http = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
tower = { workspace = true, features = ["util"] }

# Dependencies for the error handling
thiserror = { workspace = true }

# Testing dependencies
mockall = { workspace = true }

# Optional dependencies
## Aws dependencies
aws-config = { version = "1.5.3", default-features = false, features = [
    "behavior-version-latest",
], optional = true }
aws-sdk-s3 = { version = "1.38.0", default-features = false, features = [
    "rt-tokio",
    "rustls",
], optional = true }
aws-smithy-runtime-api = { version = "1.7.0", default-features = false, features = [
    "client",
], optional = true }
clap = { version = "4.5.7", default-features = false, features = [
    "std",
    "derive",
], optional = true }

# Optional dependencies
## Dependencies for tracing
tracing = { workspace = true, optional = true, features = ["log"] }

[dev-dependencies]
mockito = { version = "1.5.0" }
