[package]
name = "kiro"
description = "A client for the Kiro API"
version = "0.0.1"
authors = ["Charlie Cohen <linzellart@gmail.com>"]
license = "GNU AGPLv3"
edition = "2021"
publish = false

[features]
default = ["cli", "tracing"]
cli = ["clap"]
tracing = [
    "opentelemetry",
    "opentelemetry_sdk",
    "opentelemetry-otlp",
    "dep:tracing",
    "dep:tracing-core",
    "tracing-opentelemetry",
    "dep:tracing-subscriber",
]
postgres = ["dep:diesel", "dep:diesel_migrations"]
surrealdb = ["dep:surrealdb", "dep:surrealdb-migrations"]

[dependencies]
# Dependencies for the error handling
anyhow = { version = "1.0.86", default-features = false }
thiserror = { version = "1.0.61", default-features = false }

# Dependencies for the HTTP client
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true, features = ["transport"] }

# Dependencies for the configuration
humantime-serde = { version = "1.1" }
lazy_static = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
toml = { version = "0.8" }

# Optional dependencies
## Dependencies for CLI
clap = { version = "4.5", features = ["derive", "cargo"], optional = true }

## Dependencies for database backends
diesel = { workspace = true, features = ["postgres_backend"], optional = true }
diesel_migrations = { version = "2.2", optional = true }
surrealdb = { workspace = true, features = ["kv-mem", "jwks"], optional = true }
surrealdb-migrations = { version = "1.4.1", optional = true }

## Dependencies for the OpenTelemetry
opentelemetry = { version = "0.24.0", features = ["metrics"], optional = true }
opentelemetry_sdk = { version = "0.24.1", features = [
    "rt-tokio",
    "rt-tokio-current-thread",
], optional = true }
opentelemetry-otlp = { version = "0.17.0", features = [
    "grpc-tonic",
    "tls-roots",
    "metrics",
], optional = true }
tracing-opentelemetry = { version = "0.25", optional = true }

## Dependencies for tracing
tracing = { workspace = true, optional = true }
tracing-core = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "fmt",
    "json",
], optional = true }
