[package]
name = "kiro"
description = "The server for the Kiro tool"
version = "0.0.2"
authors = ["Charlie Cohen <linzellart@gmail.com>"]
homepage = "https://github.com/Linzell/API-Client"
license = "GNU AGPLv3"
edition = "2021"
publish = false

[features]
default = ["tracing", "surrealdb", "auth"]

auth = ["kiro_auth/services", "kiro_client/models"]
client = ["kiro_client/services"]
mailer = ["dep:uuid"]

tracing = [
    "opentelemetry",
    "opentelemetry_sdk",
    "opentelemetry-otlp",
    "dep:tracing",
    "dep:tracing-core",
    "tracing-opentelemetry",
    "dep:tracing-subscriber",
]

postgres = ["kiro_database/postgres"]
surrealdb = ["kiro_database/surrealdb"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# General dependencies
kiro_database = { workspace = true, optional = true }
chrono = { workspace = true }
dotenv = { workspace = true }

# Dependencies for the HTTP client
async-stream = { workspace = true }
async-trait = { workspace = true }
http = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true, features = [
    "json",
    "stream",
    "blocking",
    "multipart",
] }
tokio = { workspace = true, features = ["full", "signal"] }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }

# Dependencies for the gRPC server
axum = { workspace = true, features = ["http1", "http2", "tokio"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tonic = { workspace = true, features = [
    "router",
    "transport",
    "tls",
    "tls-roots",
] }
tonic-web = { version = "0.12.3", default-features = false }
tonic-reflection = { version = "0.12.3", default-features = false, features = [
    "server",
] }
tonic-health = { version = "0.12.3", default-features = false, features = [
    "transport",
] }
tower-http = { version = "0.6", default-features = false, features = [
    "auth",
    "cors",
    "trace",
] }

# TLS dependencies
rustls = { version = "0.23.10", default-features = false }
rustls-pemfile = { version = "2.1.2", default-features = false }

# Dependencies for the error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Optional dependencies
## Mailer dependencies
uuid = { version = "1.9.1", default-features = false, features = [
    "v4",
], optional = true }

# Optional dependencies
## Client dependencies
kiro_client = { workspace = true, optional = true }

# Optional dependencies
## Auth dependencies
kiro_auth = { workspace = true, optional = true }

# Optional dependencies
## Testing dependencies
mockall = { workspace = true, optional = true }

# Optional dependencies
## Dependencies for the OpenTelemetry
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, features = [
    "rt-tokio",
    "rt-tokio-current-thread",
], optional = true }
opentelemetry-otlp = { workspace = true, features = [
    "grpc-tonic",
    "tls-roots",
    "trace",
], optional = true }

# Optional dependencies
## Dependencies for tracing
tracing = { workspace = true, optional = true, features = ["log"] }
tracing-core = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "fmt",
    "json",
], optional = true }


[dev-dependencies]
dotenv = { workspace = true }
