[package]
name = "api"
description = "Protobuf / API proto definitions"
version = "0.0.1"
authors = ["Charlie Cohen <linzellart@gmail.com>"]
homepage = "https://github.com/Linzell/API-Client"
license = "GNU AGPLv3"
edition = "2021"
publish = false

[features]
default = ["api", "json"]
api = ["tonic/transport", "tonic-build/transport", "tokio"]
json = ["pbjson", "pbjson-types", "serde"]
postgres = ["dep:diesel"]
surrealdb = []

[dependencies]
prost = { version = "0.13" }
prost-types = { version = "0.13" }

diesel = { workspace = true, features = ["postgres_backend"], optional = true }
pbjson = { version = "0.7", optional = true }
pbjson-types = { version = "0.7", optional = true }
serde = { workspace = true, optional = true }
tonic = { workspace = true, default-features = false, features = [
    "codegen",
    "prost",
], optional = true }
tokio = { workspace = true, features = ["macros"], optional = true }

[build-dependencies]
pbjson-build = { version = "0.7" }
tonic-build = { version = "0.12", features = [
    "prost",
], default-features = false }
