[package]
name = "kiro_api"
description = "Protobuf / API proto definitions"
version = "0.0.2"
authors = ["Charlie Cohen <linzellart@gmail.com>"]
homepage = "https://github.com/Linzell/API-Client"
license = "GNU AGPLv3"
edition = "2021"
build = "build.rs"
publish = false

[features]
default = ["api", "json"]

api = ["tonic/transport", "tonic-build/transport", "tokio"]
json = ["pbjson", "pbjson-types", "serde"]
auth = []
client = []
group = []

postgres = ["dep:diesel"]
surrealdb = []

[dependencies]
# General dependencies
serde = { workspace = true, optional = true }
pbjson = { version = "0.7", optional = true }
pbjson-types = { version = "0.7", optional = true }

# Proto dependencies
prost = { version = "0.13" }
prost-types = { version = "0.13" }

# Dependencies for the server
tonic = { workspace = true, default-features = false, features = [
    "codegen",
    "prost",
], optional = true }
tokio = { workspace = true, features = ["macros"], optional = true }
utoipa = { workspace = true, features = ["axum_extras", "macros"] }

# Optional dependencies
## Dependencies for database backends
diesel = { workspace = true, features = ["postgres_backend"], optional = true }

[build-dependencies]
pbjson-build = { version = "0.7" }
tonic-build = { version = "0.12", features = [
    "prost",
], default-features = false }
